syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "DeletaChavePixGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

service DeletaChavePixGrpcService {
  rpc deletar (DeletaChavePixGrpcRequest) returns (DeletaChavePixGrpcResponse) {}
}

message DeletaChavePixGrpcRequest {
  int64 chaveId = 1;
  string clienteId = 2;
}

message DeletaChavePixGrpcResponse {
  string message = 1;
}